# ai_agents_course_RAG_Medium

./: .env.example  .gitignore  .vercelignore  BENCHMARK_METHODOLOGY.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  dev.py  instructions.md  main.py  pyproject.toml  rag.py  rag_logging.py  rag_utils.py  streamlit_app.py  vercel.json
api/: config.py  index.py
configs/: production.yaml
configs/experiments/: baseline_dense.yaml  chunk_500_mmr.yaml  dense_mmr.yaml  dense_mmr_chunk512_overlap015_lambda050.yaml  dense_mmr_chunk512_overlap015_lambda075.yaml  (+2 more)
eval/: baseline_dense_results.jsonl  baseline_dense_results.summary.json  dense_mmr_listing_smoke_results.jsonl  dense_mmr_listing_smoke_results.summary.json  dense_mmr_openrouter_judge_smoke_results.jsonl  dense_mmr_openrouter_judge_smoke_results.summary.json  dense_mmr_results.jsonl  dense_mmr_results.summary.json  dense_mmr_smoke_results.jsonl  dense_mmr_smoke_results.summary.json  medium_300_ai_benchmark.jsonl
logs/: eval_runs.jsonl  rag_traces.jsonl
medium_rag/: __init__.py  chunking.py  config.py  data.py  embeddings.py  generation.py  indexing.py  logging.py  pipeline.py  types.py
notebooks/: eda.ipynb
scripts/: generate_ai_benchmark.py  prepare_embeddings.py  run_ai_benchmark.py
tests/: test_api_contract.py  test_benchmark_cases.py  test_chunking.py  test_config.py  test_data.py  test_evaluation_judge.py  test_evaluation_runner_metrics.py  test_indexing.py  test_logging.py  test_pinecone_batching.py  test_pipeline_contract.py  test_retrieval_mmr.py  test_retrieval_postprocess.py
web_app/: README.md  __init__.py  app.js  index.html  server.py  styles.css
(+24 files in other folders)
