[project]
name = "ai-agents-course-rag-medium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pinecone>=9.0.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
