[project]
name = "ai-agents-course-rag-medium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pinecone>=9.0.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[project.scripts]
rag-dev = "dev:main"
rag-api = "dev:start_api"
rag-web = "dev:start_web"
rag-explorer = "web_app.server:main"
rag-all = "dev:start_all"

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dev", "main", "rag", "rag_logging", "rag_utils", "streamlit_app"]

[tool.setuptools.packages.find]
include = ["api*", "web_app*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.14.0",
    "pandas>=3.0.3",
    "ragas>=0.4.3",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
